# plants-server

./: .pre-commit-config.yaml  .travis.yml  Dockerfile  Pipfile  README.md  alembic.ini  depopulate_database  docker-compose.yml  gunicorn.conf.py  populate_database  pyproject.toml  run_alembic  run_scheduler  run_tests  run_tests_ci
.github/: dependabot.yml
.github/workflows/: build.yml  docker-build-and-push.yml  docker-build-and-test.yml
app/: database.py  main.py  models.py  schemas.py
app/images/: api.py  schemas.py
app/journaling/: journaling.py
app/notifications/: notifications.py
app/plants/: api.py  crud.py  models.py  schemas.py
app/tasks/: tasks.py
app/users/: api.py
migrations/: env.py
migrations/versions/: 23d63963cf6a_add_indoor_boolean_field.py  56a2f2c760af_add_journaling_key_to_plants.py  7f5dd2af6e23_initial_migration.py  7fcff736c054_add_watering_timestamp.py  8bfcf28920ea_rename_column.py  a4aa0f43b257_add_watering_timestamp.py  b77079c9f6a3_add_alive_boolean.py  dc7bec5b2128_initial_migration.py  f381be3fce18_add_image_field_to_plants.py  f56e8c1bbdec_add_watering_timestamp.py
pomerium/: config.yaml.example
scripts/: scheduler.py
seed/: depopulate.sql  seed.sql
tests/: test_base.py  test_main.py  test_services.py  test_tasks.py
